fix(style): fix the style & height collapsed under of workflow

--- a/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
+++ b/engine-ui/packages/console-ui/src/webapps/rdos/styles/pages/task.scss
@@ -625,7 +625,7 @@
         .normal-tab,
         .workflow-name {
             display: inline-block;
-            overflow: hidden;
+            // overflow: hidden;
             text-overflow: ellipsis;
         }
 
